# dashboard-ai-agents

./: .dockerignore  .env.example  .env.op  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
_bmad/: config.toml
app/: auth.py  config.py  db.py  main.py  permissions.py  templating.py
docs/: api-contracts.md  architecture.md  component-inventory.md  data-models.md  deployment-guide.md  development-guide.md  index.md  objektsteckbrief-feld-katalog.md  project-context.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  ux-design-spa-frontend.md
migrations/: env.py
mockups/: mietverwaltung_setup.html
scripts/: env.sh  redeploy-prod.sh
tests/: conftest.py  test_admin_logs.py  test_admin_role_edit.py  test_admin_sync_status_routes.py  test_admin_sync_status_status_calc.py  test_backend_robustness.py  test_claude_unit.py  test_code_quality.py  test_data_integrity_concurrency.py  test_documents_extraction_edit.py  test_due_radar_routes_smoke.py  test_due_radar_unit.py  test_etv_signature_list.py  test_facilioo_client_boundary.py  test_facilioo_mirror_unit.py  test_facilioo_unit.py  test_field_encryption_unit.py  test_finanzen_live_pull.py  test_finanzen_routes_smoke.py  test_foto_routes_smoke.py  test_impower_unit.py  test_impower_write.py  test_main_lifespan.py  test_menschen_notizen_unit.py  test_mietverwaltung_merge.py  test_mietverwaltung_write.py  test_mietverwaltung_write_orchestrator.py  test_migration_0012_roundtrip.py  test_permissions.py  (+35 more)
(+232 files in other folders)
